--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -42,8 +42,8 @@ jobs:
         run: |
           git checkout --orphan latest_branch
           git rm -r -f __pycache__
-          git config --local user.email "seyyedsoroushmirzaei@protonmail.com"
-          git config --local user.name "Soroush Mirzaei"
+          git config --local user.email "milad.lagzian@gmail.com"
+          git config --local user.name "lagzian"
           git add -A
           git commit -am "Updated $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M %Z')"
           git branch -D main
