--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -27,8 +27,8 @@ jobs:
           
       - name: Commit Files
         run: |
-          git config --local user.email "milad.lagzian@gmail.com"
-          git config --local user.name "lagzian"
+          git config --local user.email "dddd@gmail.com"
+          git config --local user.name "dddd"
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "Updated $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M %Z')" --allow-empty)
           
@@ -42,8 +42,8 @@ jobs:
         run: |
           git checkout --orphan latest_branch
           git rm -r -f __pycache__
-          git config --local user.email "milad.lagzian@gmail.com"
-          git config --local user.name "lagzian"
+          git config --local user.email "dddd@gmail.com"
+          git config --local user.name "ddddd"
           git add -A
           git commit -am "Updated $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M %Z')"
           git branch -D main
