--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -31,8 +31,8 @@ jobs:
           
       - name: Commit Files
         run: |
-          git config --local user.email "milad.lagzian@gmail.com"
-          git config --local user.name "lagzian"
+          git config --local user.email "ddddd@gmail.com"
+          git config --local user.name "ddddd"
           git add -A
           git diff-index --quiet HEAD || (git commit -a -m "Updated $(TZ='Asia/Tehran' date '+%Y-%m-%d %H:%M %Z')" --allow-empty)
 
